fix(java): remove duplicated `--add-opens`